--- a/Eid.html
+++ b/Eid.html
@@ -15,12 +15,11 @@
 </head>
 <body>
     <div class="container">
-        <h1 style="editable=true">Eid Special Offers</h1>
-        <p style="editable=true">Eid is a time of joy and celebration. We have special offers for you to make it even more special.</p>
-        <img src="https://media.istockphoto.com/id/2018101881/photo/ramadan-kareem-photography-lantern-with-crescent-moon-shape-on-the-beach.jpg" alt="Eid Image" style="editable=true" width="100%">
-        <p style="editable=true">Shop now and get up to 15% off on all Eid gifts.</p>
-        <a href="#" class="button" style="editable=true">Shop Now</a>
-        <p style="editable=true">If you no longer wish to receive our newsletter, please <a href="#" style="editable=true">unsubscribe</a>.</p>
+        <h1>Eid Special Offers</h1>
+        <p>Eid is a time of joy and celebration. We have special offers for you to make it even more special.</p>
+        <img src="https://media.istockphoto.com/id/2018101881/photo/ramadan-kareem-photography-lantern-with-crescent-moon-shape-on-the-beach.jpg" alt="Eid Image">
+        <p>Shop now and get up to 15% off on all Eid gifts.</p>
+        <a href="#" class="button">Shop Now</a>
     </div>
 </body>
 </html>
